# ziggy

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  agent.py  audio.py  bench.py  config.toml  database.py  index.py  llm.py  multi.py  profile_async.py  profile_embed.py  pyproject.toml  quant.py  requirements.txt  utils.py  zigcmd
cpp/: CMakeLists.txt  extension.cpp  macros.h  matmul.cpp  matmul_kernels.cu  matmul_quant.cpp  matmul_quant.h  matmul_quant_cpu.cpp  matmul_quant_cpu.h  matmul_quant_cuda.cu  matmul_quant_cuda.h  matmul_triton.py  setup.py  simple.cpp  simple.cu  simple.h  testing.cpp  testing_cpu.cpp  testing_cuda.cpp
docker/: Dockerfile_ubuntu
extension/: CMakeLists.txt  extension.cpp  extension_cpu.cpp  extension_cuda.cpp  matmul_quant.cpp  matmul_quant_cpu.cpp  matmul_quant_cpu.h  matmul_quant_cuda.cu  matmul_quant_cuda.h  matmul_triton.py  setup.py  simple.cpp  testing_cpu.cpp  testing_cuda.cpp  triton_testing.py
gptfast/: model.py
scripts/: runner.py  similarity.py
ziggy/: __init__.py  agent.py  bench.py  database.py  embed.py  guffy.py  index.py  ingest.py  llm.py  matmul.py  matmul_torch.py  matmul_triton.py  model.py  parallel.py  prompt.py  quant.py  server.py  utils.py  vision.py
ziggy/backends/: quant.py  quant_extension.py  quant_torch.py  quant_triton.py
ziggy/static/: ibmplexsans.css  index.css  index.html  index.js
